# ccplugin

plugins/core/Standard/: CMakeLists.txt
plugins/core/Standard/qDummyPlugin/: CMakeLists.txt  qDummyPlugin.h  qDummyPlugin.qrc
plugins/core/Standard/qDummyPlugin/include/: CMakeLists.txt
plugins/example/: CMakeLists.txt
plugins/example/qDummyPlugin/: info.json  qDummyPlugin.qrc
plugins/example/qDummyPlugin/src/: CMakeLists.txt  qDummyPlugin.cpp
plugins/example/qPanels/: CMakeLists.txt  info.json  qPanels.qrc
plugins/example/qPanels/include/: ActionA.h  CMakeLists.txt  fParamsDlg.h  facade.h  qPanels.h  tools.h
plugins/example/qPanels/src/: ActionA.cpp  CMakeLists.txt  fParamsDlg.cpp  facade.cpp  qPanels.cpp  tools.cpp
plugins/example/qPanels/ui/: CMakeLists.txt  fParamsDlg.ui
